plugins {
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java'
//	id 'maven-publish'
}

group = 'io.poshidaev'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

compileJava {
	options.compilerArgs += ["--enable-preview"]
}

test {
	jvmArgs '--enable-preview'
}

//publishing {
//	repositories {
//		maven {
//			name = "GitHubPackages"
//			url = "https://maven.pkg.github.com/k-pozhidaev"
////			println(System.getenv("GITHUB_TOKEN"))
////			println(System.getenv("GITHUB_ACTOR"))
//			credentials {
//				username = System.getenv("GITHUB_ACTOR")
//				password = System.getenv("GITHUB_TOKEN")
//			}
//		}
//	}
//}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'io.projectreactor:reactor-test'
}

test {
	useJUnitPlatform()
}
